--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             <div class="storeInfo_icon">
               <img src="./images/address-icon.svg" alt="" />
             </div>
-            <h3 class="storeInfo_title">Sylhet, Sreemangol</h3>
+            <h3 class="storeInfo_title">German</h3>
             <p class="storeInfo_text">Address</p>
           </div>
           <div class="storeInfo_item">
@@ -191,7 +191,7 @@
                   >sarkarsoumik215@gmail.com</a
                 >
               </li>
-              <li><a href="#">SYLHET, BANGLADESH</a></li>
+              <li><a href="#">German</a></li>
             </ol>
           </div>
         </div>
