--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                   >sarkarsoumik215@gmail.com</a
                 >
               </li>
-              <li><a href="#">SYLHET, BANGLADESH</a></li>
+              <li><a href="#">German</a></li>
             </ol>
           </div>
         </div>
