--- a/index.html
+++ b/index.html
@@ -521,7 +521,7 @@
     <div id="copyright">
       <div class="container">
         <p class="copyright_text">
-          © copyright 2023 || <span>Soumik Sarkar</span> All rigth reserved.
+          © copyright 2023 || <a herf="https://soumik-info.netlify.app/">Soumik Sarkar</span> All rigth reserved.
         </p>
       </div>
     </div>
